Fix ios bottom position safari issue

--- a/src/scss/components/_body.scss
+++ b/src/scss/components/_body.scss
@@ -9,37 +9,45 @@ html {
   max-width: 100vw;
   overflow-x: hidden;
   font-weight: 300;
-  position: relative;
 
-
-  &:before {
-    content: '';
-    width: 100%;
-    height: 100vh;
+  // Hack to fix iOS safari & firefox bottom position bug
+  .frame {
     position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -2;
-    border-style: solid;
-    border-image-outset: 1;
-    border-image-repeat: stretch;
-    border-image-slice: 1;
-    border-image-source: linear-gradient(to bottom right, #{$color-main}, #{$color-alt});
-    border-image-width: $frame-border-width;
-  }
-
-
-  //border-image fallback
-  &:after {
-    content: '';
     width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
+    height: 100%;
     left: 0;
-    z-index: -4;
-    border: calc($frame-border-width / 2) dashed $color-alt;
+    top: 0;
+    
+    &:before {
+      content: '';
+      width: 100%;
+      height: 100vh;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -2;
+      border-style: solid;
+      border-image-outset: 1;
+      border-image-repeat: stretch;
+      border-image-slice: 1;
+      border-image-source: linear-gradient(to bottom right, #{$color-main}, #{$color-alt});
+      border-image-width: $frame-border-width;
+    }
+
+    //border-image fallback
+    &:after {
+      content: '';
+      width: 100%;
+      height: 100vh;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -4;
+      border: calc($frame-border-width / 2) dashed $color-alt;
+      backdrop-filter: blur(5px);
+    }
   }
+  
 }
 
 .section-title {
